# SpikingGraph

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  MILESTONES.md  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/issues/: 001-implement-core-snn-engine.md  002-develop-gpu-backend.md  003-develop-cpu-backend.md  004-develop-npu-backend.md  005-build-core-dll-api-rust.md  006-create-ffi-bindings-python-rust.md  007-create-ffi-bindings-csharp-java.md  008-implement-interoperability-layer.md  009-add-developer-hooks-extensibility.md  010-expand-documentation-usage-examples.md
.github/workflows/: create-issues-from-files.yml  rust-build.yml
docs/: README.md
examples/: run_example.cpp
include/: spikinggraph.h
rust_core/: Cargo.toml  README.md  spikinggraph.h
rust_core/src/: lib.rs
scripts/: README.md
src/: spikinggraph.cpp
src/api/: api.cpp  api.h  readme.md  spike_encoding.cpp  spike_encoding.h  stdp.cpp  stdp.h
tests/: README.md
